--- a/ai_study/theme/templates/base.html
+++ b/ai_study/theme/templates/base.html
@@ -2,18 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>{% block title %}{% endblock title %} - AI Study Guide</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
+	<body>
+		<div class="navbar bg-base-100 shadow-sm">
+			<a class="btn btn-ghost text-xl">AI Study Guide</a>
 		</div>
+		<main class="max-w-[80ch] p-5 mx-auto">
+			{% block content %}{% endblock content %}
+		</main>
 	</body>
 </html>
