--- a/ai_study/study_guides/templates/study_guides/studyguide_create.html
+++ b/ai_study/study_guides/templates/study_guides/studyguide_create.html
@@ -15,6 +15,8 @@
     </fieldset>
     <input type="file" class="file-input" name="file">
 
-    <input class="btn" type="submit"></input>
+    <div class="mt-3">
+        <input class="btn btn-primary" type="submit" value="Create"></input>
+    </div>
 </form>
 {% endblock content %}
