--- a/ai_study/study_guides/templates/study_guides/studyguide_detail.html
+++ b/ai_study/study_guides/templates/study_guides/studyguide_detail.html
@@ -4,6 +4,13 @@
 {% block title %}{{ studyguide.title }}{% endblock title %}
 
 {% block content %}
+<a class="btn btn-block mb-5" href="{% url 'study_guides:list' %}">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+    </svg>
+    Back to my study guides
+</a>
+
 <hgroup class="space-y-2">
     <h1 class="text-3xl font-bold">{{ studyguide.title }}</h1>
     <p class="text-xl opacity-70">Created at {{ studyguide.created_at }}</p>
