--- a/ai_study/theme/templates/base.html
+++ b/ai_study/theme/templates/base.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>{% block title %}{% endblock title %} - AI Study Guide</title>
+		{% block head %} {% endblock head %}
+    	<title>{% block title %}{% endblock title %} - AI Study Guide</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,5 +17,6 @@
 		<main class="max-w-[80ch] p-5 mx-auto">
 			{% block content %}{% endblock content %}
 		</main>
+		{% block endbody %}{% endblock endbody %}
 	</body>
 </html>
